# magnetar-deer

./: .gitignore  GIT_WORKFLOW.md  LICENSE  README.md  config.env  pyproject.toml
src/magnetar_deer/: main.py  terminal.py
src/magnetar_deer/agent/: instructions.py  playgound.test.py
src/magnetar_deer/controller/: db_controller.py
src/magnetar_deer/db/: create_table.py  engine.py  table_builder.py  utils.py
src/magnetar_deer/db/data/: test.db
